--- a/Hollywood_Theatrical_Market_Synopsis_1995_to_2021.ipynb
+++ b/Hollywood_Theatrical_Market_Synopsis_1995_to_2021.ipynb
@@ -5455,7 +5455,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y = 'TOTAL GROSS'\n",
+    "x = 'GENRES'\n",
+    "dframe = df2\n",
+    "fig = px.bar(x = [i for i in dframe[x]],y = [i for i in dframe[y]],color=[i for i in dframe[x]])\n",
+    "fig.update_layout(xaxis_title = x,yaxis_title = y,title = f'Distribution based on {y} & {x}')\n",
+    "fig.show("
+   ]
   },
   {
    "cell_type": "code",
