--- a/Hollywood_Theatrical_Market_Synopsis_1995_to_2021.ipynb
+++ b/Hollywood_Theatrical_Market_Synopsis_1995_to_2021.ipynb
@@ -5488,7 +5488,7 @@
     }
    ],
    "source": [
-    "#Genres vs Number of movies released\n",
+    "#Genres vs Total Gross\n",
     "fig=plt.figure(figsize=(5,10))\n",
     "ax = sns.catplot(y='TOTAL GROSS', x='GENRES',kind='bar', data=TopGenres, height=6, aspect=3)\n",
     "plt.ylabel('TOTAL GROSS')\n",
@@ -5498,14 +5498,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "However, we can observe that the most total gross was gained from Adventure Genre"
+   ]
   },
   {
    "cell_type": "markdown",
