--- a/Hollywood_Theatrical_Market_Synopsis_1995_to_2021.ipynb
+++ b/Hollywood_Theatrical_Market_Synopsis_1995_to_2021.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "id": "Cw27boT7aCk8"
    },
@@ -47,10 +47,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Datasets (1).zip'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import wget\n",
+    "url='https://github.com/aliyusifov99/Hollywood-Theatrical-Market-Synopsis-1995-to-2021/blob/main/Datasets.zip'\n",
+    "wget.download(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting all the files now...\n",
+      "Done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# importing required modules\n",
+    "from zipfile import ZipFile\n",
+    "  \n",
+    "# specifying the zip file name\n",
+    "file_name = \"Datasets.zip\"\n",
+    "  \n",
+    "# opening the zip file in READ mode\n",
+    "with ZipFile(file_name, 'r') as zip:\n",
+    "    # printing all the contents of the zip file\n",
+    "    \n",
+    "    # extracting all the files\n",
+    "    print('Extracting all the files now...')\n",
+    "    zip.extractall()\n",
+    "    print('Done!')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,7 +104,7 @@
     "id": "Ub8sBgudkpNz"
    },
    "source": [
-    "Firstly you need to download the datasets and upload it to your workspace(Google Colab, Jupyter Notebook etc.)\n",
+    "You can also download the datasets and upload it to your workspace(Google Colab, Jupyter Notebook etc.)\n",
     "\n",
     "Link to the dataset:\n",
     "https://www.kaggle.com/johnharshith/hollywood-theatrical-market-synopsis-1995-to-2021 "
@@ -84,18 +130,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "id": "DbRlzE7k0IR8"
    },
    "outputs": [],
    "source": [
-    "AnnualTicketSales = pd.read_csv('AnnualTicketSales.csv')"
+    "AnnualTicketSales = pd.read_csv('Datasets/AnnualTicketSales.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -200,7 +246,7 @@
        "4                $8.97         NaN  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
